--- a/index.html
+++ b/index.html
@@ -10,43 +10,75 @@
 <body>
 
     <div id="container">
-        <div id="attacker" class="player">
-            <button id="roll-attacker" class="btn-atk" onclick="rollAtk()" style="transform: rotate(180deg);">ROLL - ATTACKER</button>
-            <div class="dice-set">
+        <div id="attacker" class="player reverse">
+
+            <div class="line">
                 <div id="da1" class="die-opt">
-                    <input type="checkbox" id="atk-d1" class="chkbox atk-chkbox" />
                     <span id="atkimg-d1" class="die bg"></span>
                 </div>
                 <div id="da2" class="die-opt">
-                    <input type="checkbox" id="atk-d2" class="chkbox atk-chkbox" />
                     <span id="atkimg-d2" class="die bg"></span>
                 </div>
                 <div id="da3" class="die-opt">
-                    <input type="checkbox" id="atk-d3" class="chkbox atk-chkbox" />
                     <span id="atkimg-d3" class="die bg"></span>
                 </div>
             </div>
+
+            <div class="dice-selector">
+                <p>Quantidade de Dados</p>
+                <div class="line">
+                    <div class="die-opt">
+                        <input type="radio" id="atk-d1" name="atk-qty" class="radio" value="1" checked />
+                        <label for="atk-d1">1</label>
+                    </div>
+                    <div class="die-opt">
+                        <input type="radio" id="atk-d2" name="atk-qty" class="radio" value="2" />
+                        <label for="atk-d2">2</label>
+                    </div>
+                    <div id="da1" class="die-opt">
+                        <input type="radio" id="atk-d3" name="atk-qty" class="radio" value="3" />
+                        <label for="atk-d3">3</label>
+                    </div>
+                </div>
+            </div>
+
+            <button id="roll-attacker" class="btn-atk" onclick="rollAtk()">ROLL - ATTACKER</button>
         </div>
 
-        <hr />
-        <button id="reset-btn" onclick="reset()" style="transform: rotate(180deg);">RESET</button>
-        <hr />
+        <button id="reset-btn" class="btn-reset" onclick="reset()" style="transform: rotate(180deg);">RESET</button>
 
         <div id="defender" class="player">
-            <div class="dice-set">
+
+            <div class="line">
                 <div id="dd1" class="die-opt">
                     <span id="defimg-d1" class="die bg"></span>
-                    <input type="checkbox" id="def-d1" class="chkbox def-chkbox" />
                 </div>
                 <div id="dd2" class="die-opt">
                     <span id="defimg-d2" class="die bg"></span>
-                    <input type="checkbox" id="def-d2" class="chkbox def-chkbox" />
                 </div>
                 <div id="dd3" class="die-opt">
                     <span id="defimg-d3" class="die bg"></span>
-                    <input type="checkbox" id="def-d3" class="chkbox def-chkbox" />
                 </div>
             </div>
+
+            <div class="dice-selector">
+                <p>Quantidade de Dados</p>
+                <div class="line">
+                    <div class="die-opt">
+                        <input type="radio" id="def-d1" name="def-qty" class="radio" value="1" checked />
+                        <label for="def-d1">1</label>
+                    </div>
+                    <div class="die-opt">
+                        <input type="radio" id="def-d2" name="def-qty" class="radio" value="2" />
+                        <label for="def-d2">2</label>
+                    </div>
+                    <div id="da1" class="die-opt">
+                        <input type="radio" id="def-d3" name="def-qty" class="radio" value="3" />
+                        <label for="def-d3">3</label>
+                    </div>
+                </div>
+            </div>
+
             <button id="roll-defender" class="btn-def" onclick="rollDef()">ROLL - DEFENDER</button>
         </div>
     </div>
