--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <input type="radio" id="def-d2" name="def-qty" class="radio" value="2" />
                         <label for="def-d2">2</label>
                     </div>
-                    <div id="da1" class="die-opt">
+                    <div class="die-opt">
                         <input type="radio" id="def-d3" name="def-qty" class="radio" value="3" />
                         <label for="def-d3">3</label>
                     </div>
@@ -73,7 +73,7 @@
                         <input type="radio" id="atk-d2" name="atk-qty" class="radio" value="2" />
                         <label for="atk-d2">2</label>
                     </div>
-                    <div id="da1" class="die-opt">
+                    <div class="die-opt">
                         <input type="radio" id="atk-d3" name="atk-qty" class="radio" value="3" />
                         <label for="atk-d3">3</label>
                     </div>
