--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div id="defender" class="player reverse">
 
-            <div class="line">
+            <div class="line reverse">
                 <div id="dd1" class="die-opt">
                     <span id="defimg-d1" class="die bg"></span>
                 </div>
